# x80sv

./: .gitignore  .travis.yml  README.md  TODO  rviz_config.rviz
doc/: Makefile  main.tex
doc/img/: overview.dot
erratic_description/launch/: erratic_empty_world.launch  erratic_mobile_base.launch
erratic_description/urdf/: erratic.urdf.xacro  erratic_base.xacro  erratic_computer.xacro  erratic_hokuyo_laser.xacro  erratic_laser.urdf.xacro  erratic_wheel.xacro  materials.urdf.xacro  tmp.urdf
measurements/: 2014-12-17-08-37-02.bag  cmd_vel.csv  pos.csv  speed_issue.py  vel.csv
skynav_x80sv/: CMakeLists.txt  README.md  package.xml
skynav_x80sv/msg/: MotorInfoArray.msg  StandardSensor.msg
skynav_x80sv/src/: robot_wrapper.cpp
skynav_x80sv/src/revo_lds/: xv11_laser.cpp
skynav_x80sv/src/x80/: drrobot_player.cpp
skynav_x80sv/src/x80/sensor_driver/: DrRobotCommConst.hpp
smooth_local_planner/: CMakeLists.txt  package.xml  pathplanning.py  smooth_local_planner_plugin.xml
smooth_local_planner/include/: smooth_local_planner.h
smooth_local_planner/src/: smooth_local_planner.cpp
x80sv/: CMakeLists.txt  package.xml
x80sv_bringup/: CMakeLists.txt  costmap_common_params.yaml  local_costmap_params.yaml  package.xml  view.rviz
x80sv_bringup/launch/: intelligence.launch  real_robot_driver.launch  sim_robot_driver.launch  sim_world_1.launch  sim_world_5.launch  skynav_real_robot.launch  skynav_sim_robot.launch  teleop_joy.launch  willow_garage.launch  x80sv_gmapping.launch  x80sv_manual_control.launch
x80sv_bringup/launch/real/: real_robot_driver.launch  skynav_real_robot.launch
x80sv_bringup/launch/sim/: sim_robot_driver.launch  sim_world.launch  sim_world_nogui.launch  skynav_sim_robot.launch
x80sv_bringup/launch/sim_worlds/: sim_world.launch  sim_world_1.launch  sim_world_2.launch  sim_world_3.launch  sim_world_4.launch
x80sv_bringup/scripts/: steer_node.py
x80sv_description/: CMakeLists.txt  README.md  check_urdf.sh  package.xml
x80sv_description/launch/: description.launch
x80sv_description/urdf/: calc_inertia.py  wheel.xacro  x80sv.backup.xacro  x80sv.xacro
x80sv_driver/: CMakeLists.txt  README.md  package.xml  x80_config.yaml
x80sv_driver/cfg/: x80sv_driver.cfg
x80sv_driver/include/: CommBase.hpp  DrRobotCommInterface.hpp  DrRobotMotionSensorDriver.hpp  NetworkCommInterface.hpp  SerialCommInterface.hpp  player_node.h  signalprocessing.h
x80sv_driver/include/xv_11_laser_driver/: xv11_laser.h
x80sv_driver/launch/: default.launch
x80sv_driver/msg/: CustomSensor.msg  MotorInfo.msg  PowerInfo.msg  RangeArray.msg  RangeDefined.msg  RangeDefinedArray.msg  WheelVelocities.msg
x80sv_driver/scripts/: blink1-mini-tool  statusled.py
x80sv_driver/src/: robot_wrapper.cpp  sensor_safety.cpp
x80sv_driver/src/revo_lds/: neato_laser_publisher.cpp  xv11_laser.cpp
x80sv_driver/src/x80/: DrRobotMotionSensorDriver.cpp  comm_base.cpp  drrobot_joystick_teleop.cpp  drrobot_keyboard_teleop.cpp  drrobot_player.cpp  network_comm.cpp  player_node.cpp  serial_comm.cpp
x80sv_driver/src/x80/sensor_driver/: DrRobotMotionSensorDriver.cpp
x80sv_driver/test/: test_laser.cpp  test_x80svdriver.cpp
x80sv_driver/tools/: protocol_demo.py
x80sv_driver/udev/: 52-neato-revo-lds.rules  52-x80sv.rules
x80sv_navigation/: 2014-12-01-16-25-23.bag  CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  driver_random.py  global_costmap_params.yaml  local_costmap_params.yaml  measurement.txt  move_base_params.yaml  package.xml  plot_acceleration.py  readme.rst
x80sv_navigation/launch/: explore.launch  explore_sim_world.launch  record_progress.launch  x80sv_navigation.launch
x80sv_nerves/: CMakeLists.txt  global_costmap_params.yaml  gmap.rviz  package.xml  readme.rst
x80sv_nerves/config/: x80sv_control.yaml
x80sv_nerves/launch/: intelligence.launch
x80sv_nerves/scripts/: control_node.py  odom_emitter.py  steer_node.py
x80sv_simulation/: CMakeLists.txt  README.md  package.xml  readme.rst
x80sv_simulation/launch/: localnav_world_1.launch  simulator.launch  x80sv_testarea.launch
x80sv_simulation/models/: database.config
x80sv_simulation/models/wall/: model-1_2.sdf  model-1_3.sdf  model.config  model.sdf
x80sv_simulation/msg/: TimedPose2D.msg
x80sv_simulation/scripts/: odom_emitter.py
x80sv_simulation/src/: laser_filter.cpp  simulator.cpp
x80sv_simulation/worlds/: localnav_world_1.world  localnav_world_2.world  localnav_world_3.world  localnav_world_4.world  office_test.world  office_test_2.world  testarea.world  willowgarage.world  world_1.world  world_2.world  world_3.world  world_5.world  world_test.world  world_test_2.world
