<?xml version="1.0"?>
<package>
	<name>skynav_x80sv</name>
	<version>0.0.0</version>
	<description>skynav_x80sv</description>
	<maintainer email="a@a.com">DrRobot</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>		
	<build_depend>skynav_msgs</build_depend>		
	<build_depend>joy</build_depend>
	<build_depend>boost</build_depend>

	
	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>skynav_msgs</run_depend>
	<run_depend>joy</run_depend>
	<run_depend>boost</run_depend>
	
	
	
	
<!--   <depend package="roscpp"/>
  <depend package="rospy"/>
  <depend package="tf"/>
  <depend package="geometry_msgs"/>
  <depend package="roslib"/>
  <depend package="nav_msgs"/>
  <depend package="std_msgs"/>
  <depend package="sensor_msgs"/>
  <depend package="player"/>
  <depend package="joy"/>
  
  <depend package="skynav_msgs"/>
  
  <rosdep name="boost" /> -->
</package>


