<?xml version="1.0"?>
<package>
	<name>x80sv_driver</name>
	<version>0.0.0</version>
	<description>x80sv_driver</description>
	<maintainer email="a@a.com">DrRobot</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>		
	<build_depend>skynav_msgs</build_depend>		
	<build_depend>joy</build_depend>
	<build_depend>boost</build_depend>
	<build_depend>rostest</build_depend>

	
	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>skynav_msgs</run_depend>
	<run_depend>joy</run_depend>
	<run_depend>boost</run_depend>
	
	
	<!-- note: missing player package, no longer available for Hydro -->
	
</package>


