<?xml version="1.0"?>
<package>
  <name>x80sv_navigation</name>
  <version>0.0.1</version>
  <description>Navigation stack on x80sv robot.</description>
  <maintainer email="windel.bouwman@gmail.com">Windel Bouwman</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
